@@ -2,7 +2,7 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: %pluginName
 Bundle-SymbolicName: org.ucdetector;singleton:=true
-Bundle-Version: 0.11.2
+Bundle-Version: 0.11.3
 Bundle-Activator: org.ucdetector.UCDetectorPlugin
 Bundle-Vendor: %providerName
 Bundle-Localization: plugin
